src/pages/fotos.module.css
.archiveContainer {
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: space-between;
  width: 100%;
  padding-right: 40px;
  margin-bottom: 30px;
}

.mainContainer {
  display: flex;
  flex-direction: row;
  align-items: flex-start;
  margin-top: 40px;
}

.archiveContainer h1 {
  margin: 0;
}

.archiveContainer a {
  color: gray;
}

.sidebar {
  width: 30%;
  border-right: 1px solid rgb(194, 194, 194);
}

.sidebar h3 {
  margin-top: 0;
  cursor: default;
}

.sidebar li {
  list-style: none;
  cursor: pointer;
  padding: 5px;
  color: rgb(80, 80, 80);
  margin: 0;
  margin-right: 8px;
}

.sidebar ul {
  margin: 0;
}

.sidebar li:hover {
  background-color: rgb(255, 199, 95);
  border-radius: 3px;
}

.galleries {
  padding: 30px;
  width: 100%;
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  min-height: 250px;
}

.gallery {
  color: gray;
  width: 50%;
  padding: 20px;
}

.gallery img {
  overflow: hidden;
  border-radius: 3px;
}

.title {
  margin-top: 10px;
}

.noPicture {
  width: 100%;
  text-align: center;
  color: gray;
}

